fix to make sure the whole shared area is visible when presenting in videocalls

--- a/mods/videocall/web/css/videocall-video-interface.css
+++ b/mods/videocall/web/css/videocall-video-interface.css
@@ -360,6 +360,11 @@
 	height: 100%;
 }
 
+video#presentation {
+    object-fit: contain;
+    padding: 3px;
+}
+
 .video-box-container-large>#connection-message {
 	color: var(--saito-white);
 	width: 50%;
